# python-project-50

./: .coverage  .gitignore  Makefile  README.md  coverage.xml  coverege.xml  pyproject.toml  setup.cfg
.github/workflows/: gendiff.yml  pyci.yml
gendiff/: __init__.py  diff_tree.py  formatting.py  generate_diff.py  parse_cli.py  parse_data.py
gendiff/format/: __init__.py  json_format.py  plain.py  stylish.py
gendiff/formats/: format_plain.py  format_stylish.py
gendiff/scripts/: clli.py  gendiff.py  make_data.py
tests/: test_gendiff.py  test_make_data.py
tests/fixtures/: check_json.json  check_json.txt  check_plain.txt  check_stylish.txt  tree1.json
